--- a/style.css
+++ b/style.css
@@ -17,16 +17,22 @@ body {
     margin : 30px;
     background: #ffffff;
     width: 100%;
-    padding: 15px 15px;
+    padding: 20px 20px;
     border-radius: 15px;
     box-sizing: border-box;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 
+h2 {
+    text-align: center;
+    font-size: 40px;
+    color: #333;
+}
+
 label {
     display: block;
     margin-top: 25px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 600;
     color: #444;
 }
@@ -36,10 +42,10 @@ input, select, textarea {
     width: 100% !important;
     background: #ffffff;
     padding: 15px;
-    margin-top: 12px;
+    margin-top: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    font-size: 25px;
+    font-size: 20px;
     box-sizing: border-box;
 
     -webkit-appearance: none;
