--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     font-family: "Kanit", sans-serif;
     background: #f5f5f5;
     margin: 0;
-    padding: 15px; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +41,7 @@ input, select, textarea {
     width: 100% !important;
     background: #ffffff;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 16px;
@@ -50,4 +49,48 @@ input, select, textarea {
 
     -webkit-appearance: none;
     appearance: none;
+}
+
+.date-input:before {
+    content: attr(data-placeholder);
+    color: #777;
+    position: absolute;
+    pointer-events: none;
+}
+
+.date-input:focus:before,
+.date-input.filled:before {
+    display: none;
+}
+
+select {
+    background-color: white;
+    background-position: right 12px center;
+    background-repeat: no-repeat;
+}
+
+textarea {
+    height: 100px;
+    resize: vertical;
+}
+
+button {
+    font-family: "Kanit", sans-serif !important;;
+    width: 100%;
+    background: #4CAF50;
+    border: none;
+    padding: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.25s;
+}
+
+button:hover {
+    background: #43a047;
+    transform: translateY(-2px);
 }
